--- a/.github/workflows/sync-after-release.yml
+++ b/.github/workflows/sync-after-release.yml
@@ -39,6 +39,7 @@ jobs:
           MAX_ATTEMPTS=60
           ATTEMPT=0
 
+          sleep 3
           while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
             echo "Attempt $((ATTEMPT + 1))/$MAX_ATTEMPTS"
 
@@ -116,6 +117,7 @@ jobs:
           MAX_ATTEMPTS=60
           ATTEMPT=0
 
+          sleep 3
           while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
             echo "Attempt $((ATTEMPT + 1))/$MAX_ATTEMPTS"
 
